Added auditing and rest security